--- a/dondler/books/templates/books/home.html
+++ b/dondler/books/templates/books/home.html
@@ -101,13 +101,13 @@
     </div>
 </div>
 <script>
-    var content = 'If life is so blue, then select another colour from the rainbow';
+    var content = 'Welcome to Dondler. You can find your latest syllabus for kurukshetra university here with detailed resource for every topic. Click on any subject to continue your search';
 
     var ele = '<span>' + content.split('').join('</span><span>') + '</span>';
 
 
     $(ele).hide().appendTo('temp').each(function (i) {
-        $(this).delay(100 * i).css({
+        $(this).delay(20 * i).css({
             display: 'inline',
             opacity: 0
         }).animate({
